# ChangeLog for net-misc/x2goclient
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/x2goclient/ChangeLog,v 1.2 2009/04/16 14:00:21 voyageur Exp $

  19 Apr 2010; Bernard Cafarelli <voyageur@gentoo.org>
  -x2goclient-3.00.1.ebuild, -files/x2goclient-3.00.1-ldap.patch,
  -files/x2goclient-3.00.1-noldap.patch, -x2goclient-3.01.3.ebuild,
  x2goclient-3.01.5.ebuild, +files/x2goclient-3.01.5-noldap.patch:
  Update no-ldap patch, bug #315533. Also fix desktop entry and drop old
  versions

*x2goclient-3.01.5 (15 Apr 2010)

  15 Apr 2010; Joachim Langenbach <joachim@falaba.de> x2goclient-3.01.5.ebuild:
  Added new Ebuild
  ldap patch is not needed anymore, because it's in sources already

  16 Apr 2009; Bernard Cafarelli <voyageur@gentoo.org> Manifest:
  Upstream modified source tarball, bug #266141

*x2goclient-2.99.3 (13 Mar 2009)
*x2goclient-2.0.1.24 (13 Mar 2009)

  13 Mar 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +files/x2goclient-2.0.1-noldap.patch, +metadata.xml,
  +x2goclient-2.0.1.24.ebuild, +x2goclient-2.99.3.ebuild:
  Initial portage commit, from the NX overlay
