@@ -1,18 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-inherit perl-module
-
-DESCRIPTION="Stringified perl data structures, suitable for both printing and eval"
-HOMEPAGE="http://search.cpan.org/~ilyam/Data-Dumper-2.121/Dumper.pm"
-SRC_URI="http://search.cpan.org/CPAN/authors/id/I/IL/ILYAM/Data-Dumper-2.121.tar.gz"
-
-LICENSE="Artistic"
-SLOT="0"
-KEYWORDS="~x86"
-IUSE=""
-
-DEPEND="dev-lang/perl"
-RDEPEND="${DEPEND}"
-
