@@ -1,3 +1,0 @@
-MD5 10d6ff7a85fa3e5f91fcb2e6593cfd1b Data-Dumper-2.121.tar.gz 31931
-RMD160 638c283246eaa5fe8e745843bb56f95e930c86ba Data-Dumper-2.121.tar.gz 31931
-SHA256 827e3b13f9f92fc749e4e50bc1c85ce0870f2b76e5baceb1f7b4a7b1ca36c103 Data-Dumper-2.121.tar.gz 31931
