@@ -7,14 +7,14 @@ http://x2go.berlios.de
 GPL-2
 The X2Go Qt client
 ~amd64 ~x86
-base eutils multilib portability qt4 toolchain-funcs versionator
+base eutils multilib portability qt4-r2 toolchain-funcs versionator
 ldap
 
 
 
-2
+3
 
-compile configure install postinst prepare setup unpack
+compile configure install postinst prepare unpack
 
 
 
