@@ -1,5 +1,5 @@
 AUX x2goclient-3.01.5-noldap.patch 829 RMD160 3cd3e19685ed3d4336c064f629adee9dfb858f68 SHA1 c6a0628ca1550be88e1fa6fe3993118df646d55f SHA256 a9e7e17768d07f26554e810615f1f98e416212f81e90daa638b9c721a46b6d81
 DIST x2goclient_3.01-5.tar.gz 10274153 RMD160 d0cd000d6d235e29dbd17da292b6784ada000f64 SHA1 916a02a78febbfd6fe3d74e101e1eb46597e7bde SHA256 ce671a628b17614bdcf443bd5ff22f644ceca1dad634c8823fcad8438a3751e3
-EBUILD x2goclient-3.01.5.ebuild 1701 RMD160 14e5075eabf0258f05c5d40fc4f5e82f23254fea SHA1 926362cad63245f94dfca948aff2d236416358b4 SHA256 22970b79aa19d9b673631fa281fa1eb60d95352889928ea52d862dd364410541
-MISC ChangeLog 1154 RMD160 19b3a3312f34b23950a0f4a34096466141c75231 SHA1 c607b9f2fe3c25b13e5197ec111e7c1b7481cd1b SHA256 cbf987c160ba561de0809476adda84c8352d48034d76f761362aafb4813f39cb
+EBUILD x2goclient-3.01.5.ebuild 1647 RMD160 f04bb68dfcb6e08d77769343381866531afd7d63 SHA1 338593aa181530c0aade0f457cf05b483561572a SHA256 608565f44f2f3fdd1a9e61c779c1038b36f3e8abdf499d7466cfcbff07f73a0a
+MISC ChangeLog 1264 RMD160 2de5ced33f077bd0b4ae159ea6bca58bfb742940 SHA1 7c1adaebce3a10b09603105ecc1700e097eb6a29 SHA256 e35627b05559e91b1b09d54b76d2f64f4f5c70e5a91c575faf405e66dc2d2237
 MISC metadata.xml 211 RMD160 7569a339443bfffd41ebdb1db3683d6bbcd2fe5b SHA1 84050eff2270b3218cf8eb00363fe12ecdadfe2e SHA256 a6b5a5387c7e7f441d794c61edf1718caa3c58ffbf9b595ec536ff9617a7471f
