@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/net-misc/x2goclient/ChangeLog,v 1.2 2009/04/16 14:00:21 voyageur Exp $
 
+  29 Apr 2010; Bernard Cafarelli <voyageur@gentoo.org>
+  x2goclient-3.01.5.ebuild:
+  Update to qt4-r2 eclass
+
   19 Apr 2010; Bernard Cafarelli <voyageur@gentoo.org>
   -x2goclient-3.00.1.ebuild, -files/x2goclient-3.00.1-ldap.patch,
   -files/x2goclient-3.00.1-noldap.patch, -x2goclient-3.01.3.ebuild,
